.provarCaches/00D410000011HE0EAM/objects/rstk__syqbcoa__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syqbcoa</customHelpPage>
    <description>syqbcoa__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>IF(ISBLANK(rstk__syqbcoa_cmpno__c), &apos;&apos;, (rstk__syqbcoa_cmpno__c &amp; &apos;_&apos;)) &amp; rstk__syqbcoa_number__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_number__c</fullName>
        <formula>IF(ISBLANK( rstk__syqbcoa_number__c) ,  rstk__syqbcoa_name__c ,  rstk__syqbcoa_number__c )</formula>
        <inlineHelpText>Internal formula for constructing the associated field.</inlineHelpText>
        <label>Formula Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_cmpno__c</fullName>
        <description>Ticket 8981</description>
        <inlineHelpText>The Company Number of the Company for which this Account pertains.</inlineHelpText>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_desc__c</fullName>
        <inlineHelpText>Quickbooks Account Description</inlineHelpText>
        <label>Account Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Flag is set to True if the Quickbooks Account already exists</inlineHelpText>
        <label>Delete Check Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_name__c</fullName>
        <inlineHelpText>Quickbooks Account Name</inlineHelpText>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_number__c</fullName>
        <inlineHelpText>Quickbooks Chart of Account Number</inlineHelpText>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_refnum__c</fullName>
        <inlineHelpText>Quickbooks Account Reference Number</inlineHelpText>
        <label>Reference Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_sycmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rootstock Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>G/L Account</relationshipLabel>
        <relationshipName>syqbcoas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syqbcoa_type__c</fullName>
        <inlineHelpText>Quickbooks Account Type</inlineHelpText>
        <label>Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>G/L Account</label>
    <listViews>
        <fullName>rstk__QuickBooks_Accounts</fullName>
        <columns>NAME</columns>
        <columns>rstk__syqbcoa_cmpno__c</columns>
        <columns>rstk__syqbcoa_number__c</columns>
        <columns>rstk__syqbcoa_name__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__syqbcoa_desc__c</columns>
        <columns>rstk__syqbcoa_type__c</columns>
        <columns>rstk__syqbcoa_refnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>QuickBooks Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_QuickBooks_Accounts</fullName>
        <columns>NAME</columns>
        <columns>rstk__syqbcoa_cmpno__c</columns>
        <columns>rstk__syqbcoa_number__c</columns>
        <columns>rstk__syqbcoa_name__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__syqbcoa_desc__c</columns>
        <columns>rstk__syqbcoa_type__c</columns>
        <columns>rstk__syqbcoa_refnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>QuickBooks Accounts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G/L Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Account_Name</fullName>
        <active>true</active>
        <description>Account Name is required.</description>
        <errorConditionFormula>ISBLANK(rstk__syqbcoa_name__c)</errorConditionFormula>
        <errorMessage>Account Name is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Account_Number</fullName>
        <active>true</active>
        <description>Account Number is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__syqbcoa_number__c) || ( NOT(ISNEW()) &amp;&amp;  ISCHANGED(rstk__syqbcoa_number__c) )</errorConditionFormula>
        <errorMessage>Account Number is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Account_Type</fullName>
        <active>true</active>
        <description>Account Type is required.</description>
        <errorConditionFormula>ISBLANK(rstk__syqbcoa_type__c)</errorConditionFormula>
        <errorMessage>Account Type is required.</errorMessage>
    </validationRules>
</CustomObject>